Fix travis build file

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,6 @@ script:
 branches:
   only:
       - master
-      - /^feature-*$/
-      - /^version-*$/
+      - /^feature-.*$/
+      - /^version-.*$/
 
