--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,8 @@ before_install:
     - if [ "$TRAVIS_OS_NAME" == "osx"   -a "$CXX" == "clang++" ]; then sudo ln -s /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/llvm-cov /usr/local/bin/llvm-cov; fi
     - if [ "$TRAVIS_OS_NAME" == "osx" ];    then sudo chmod 777 /usr/local/lib/pkgconfig; fi
     - if [ "$TRAVIS_OS_NAME" == "osx" ];    then brew install nginx; fi
-    - if [ "$TRAVIS_OS_NAME" == "osx" ];    then sed -e 's/listen 8080;/listen 8090;/' /usr/local/etc/nginx/nginx.conf > tmp;fi
+    - if [ "$TRAVIS_OS_NAME" == "osx" ];    then sudo mkdir -p /var/www;sudo chmod 755 /usr/local/var;fi
+    - if [ "$TRAVIS_OS_NAME" == "osx" ];    then sed -e 's/listen *8080;/listen 8090;/' /usr/local/etc/nginx/nginx.conf > tmp;fi
     - if [ "$TRAVIS_OS_NAME" == "osx" ];    then sudo mv tmp /usr/local/etc/nginx/nginx.conf;fi
     - if [ "$TRAVIS_OS_NAME" == "osx" ];    then sudo cp src/SocketStream/test/data/ThorStreamTest.html /usr/local/var/www/;fi
     - if [ "$TRAVIS_OS_NAME" == "osx" ];    then sudo nginx;fi
