Update to new build system
    Also enable Travis builds

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "build"]
 	path = build
-	url = git@github.com:Loki-Astari/ThorMaker.git
+	url = http://github.com/Loki-Astari/ThorMaker.git
