--- a/.travis.yml
+++ b/.travis.yml
@@ -1,53 +1,27 @@
 git:
     submodules: false
 language: cpp
-os:
-    - linux
-    - osx
-compiler:
-    - gcc
-    - clang
 env:
-    - THOR_STREAM_TEST_PORT=8090
+    - THOR_STREAM_TEST_PORT=8080
 before_install:
-    - mv .gitmodules gitmodules.old
-    - sed -e 's#git@\([^:]*\):#https://\1/#' gitmodules.old > .gitmodules
-    - rm gitmodules.old
-    - if [ "$TRAVIS_OS_NAME" == "linux" ];                        then sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y;fi
-    - if [ "$TRAVIS_OS_NAME" == "linux" -a "$CXX" == "clang++" ]; then sudo add-apt-repository 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.5 main' -y ;fi
-    - if [ "$TRAVIS_OS_NAME" == "linux" -a "$CXX" == "clang++" ]; then wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key|sudo apt-key add -;fi
-    - if [ "$TRAVIS_OS_NAME" == "linux" ];                        then sudo apt-get update;fi
-    - if [ "$TRAVIS_OS_NAME" == "linux" ];                        then sudo apt-get install -qq g++-4.9;fi
-    - if [ "$TRAVIS_OS_NAME" == "linux" -a "$CXX" == "g++" ];     then sudo update-alternatives --install /usr/bin/gcc  gcc  /usr/bin/gcc-4.9  90;fi
-    - if [ "$TRAVIS_OS_NAME" == "linux" -a "$CXX" == "g++" ];     then sudo update-alternatives --install /usr/bin/g++  g++  /usr/bin/g++-4.9  90;fi
-    - if [ "$TRAVIS_OS_NAME" == "linux" -a "$CXX" == "g++" ];     then sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-4.9 90;fi
-    - if [ "$TRAVIS_OS_NAME" == "linux" -a "$CXX" == "clang++" ]; then sudo apt-get install clang-3.5;fi
-    - if [ "$TRAVIS_OS_NAME" == "linux" -a "$CXX" == "clang++" ]; then sudo update-alternatives --install /usr/bin/clang  clang  /usr/bin/clang-3.5  90;fi
-    - if [ "$TRAVIS_OS_NAME" == "linux" -a "$CXX" == "clang++" ]; then sudo update-alternatives --install /usr/bin/clang++  clang++  /usr/bin/clang++-3.5  90;fi
-    - if [ "$TRAVIS_OS_NAME" == "linux" -a "$CXX" == "clang++" ]; then a=$(sudo find / -name llvm-cov | grep 3.5 | head -1);sudo ln -s ${a} /usr/bin/llvm-cov;fi
-    - if [ "$TRAVIS_OS_NAME" == "linux" -a "$CXX" == "clang++" ]; then a=$(sudo find / -name llvm-cov | grep 3.4 | head -1);sudo mv ${a} ${a}.old;fi
-    - if [ "$TRAVIS_OS_NAME" == "osx"   -a "$CXX" == "clang++" ]; then sudo ln -s /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/llvm-cov /usr/local/bin/llvm-cov; fi
-    - if [ "$TRAVIS_OS_NAME" == "osx" ];    then sudo chmod 777 /usr/local/lib/pkgconfig; fi
-    - if [ "$TRAVIS_OS_NAME" == "osx" ];    then brew install nginx; fi
-    - if [ "$TRAVIS_OS_NAME" == "osx" ];    then sudo mkdir -p /var/www;sudo chmod 755 /usr/local/var;fi
-    - if [ "$TRAVIS_OS_NAME" == "osx" ];    then sed -e 's/listen *8080;/listen 8090;/' /usr/local/etc/nginx/nginx.conf > tmp;fi
-    - if [ "$TRAVIS_OS_NAME" == "osx" ];    then sudo mv tmp /usr/local/etc/nginx/nginx.conf;fi
-    - if [ "$TRAVIS_OS_NAME" == "osx" ];    then sudo cp src/SocketStream/test/data/ThorStreamTest.html /usr/local/var/www/;fi
-    - if [ "$TRAVIS_OS_NAME" == "osx" ];    then sudo nginx;fi
-    - if [ "$TRAVIS_OS_NAME" == "linux" ];  then sudo apt-get install nginx;fi
-    - if [ "$TRAVIS_OS_NAME" == "linux" ];  then sed -e 's/.*listen   80;.*/listen 8090;/'  /etc/nginx/sites-enabled/default > tmp;fi
-    - if [ "$TRAVIS_OS_NAME" == "linux" ];  then sudo mv tmp /etc/nginx/sites-enabled/default;fi
-    - if [ "$TRAVIS_OS_NAME" == "linux" ];  then sudo cp src/SocketStream/test/data/ThorStreamTest.html /usr/share/nginx/www/;fi
-    - if [ "$TRAVIS_OS_NAME" == "linux" ];  then sudo nginx;fi
+    - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+    - sudo apt-get update
 install:
-    - ./configure
+    - sudo apt-get install -qq g++-7 -y
+    - sudo apt-get install python-dev -y
+    - sudo apt-get install -qq libboost-all-dev
+    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 60 --slave /usr/bin/g++ g++ /usr/bin/g++-7
+    - wget -O boost_1_56.tar.gz http://sourceforge.net/projects/boost/files/boost/1.56.0/boost_1_56_0.tar.gz/download
+    - tar xzf boost_1_56.tar.gz;cd boost_1_56_0/;mkdir -p /tmp/extra;./bootstrap.sh --prefix=/tmp/extra
+    - ./b2 cxxflags="-Wno-strict-aliasing -Wno-unused-local-typedefs -Wno-maybe-uninitialized -Wno-deprecated-declarations -Wno-placement-new" --with-system --with-context --with-coroutine
+    - sudo ./b2 --with-system --with-context --with-coroutine install | awk 'NR == 1 || NR % 25 == 0'
+    - cd ..
+    - sudo apt-get install npm -y
+    - npm install -g http-server
+    - http-server src/SocketStream/test/data/ &
 script:
-    - make 
+    - ./configure --with-boost=/tmp/extra
+    - export PATH=${PATH}:$(pwd)/build/bin;make
 after_success:
-    - ./uploadcodecovrage
-branches:
-  only:
-      - master
-      - /^feature-.*$/
-      - /^version-.*$/
+    - bash <(curl -s https://codecov.io/bash)
 
