--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "build"]
 	path = build
 	url = http://github.com/Loki-Astari/ThorMaker.git
+[submodule "docSource/themes/documentation"]
+	path = docSource/themes/documentation
+	url = git@github.com:Loki-Astari/andvari-theme-documentation.git
