Make sure we use http version of repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = http://github.com/Loki-Astari/ThorMaker.git
 [submodule "docSource/themes/documentation"]
 	path = docSource/themes/documentation
-	url = git@github.com:Loki-Astari/andvari-theme-documentation.git
+	url = http://github.com/Loki-Astari/andvari-theme-documentation.git
