--- a/configure.ac
+++ b/configure.ac
@@ -29,6 +29,8 @@ Error: Could not find libcurl
             )
 
 
+AC_DEFINE([HEADER_ONLY], [0], [Enable to use header only libraries])
+AC_DEFINE([HEADER_ONLY_INCLUDE], [], [For header only convery to inline])
 AM_INIT_AUTOMAKE([foreign -Wall -Werror])
 AC_CONFIG_HEADERS([src/SocketStream/ThorsStreamConfig.h])
 AC_CONFIG_FILES([Makefile.extra Makefile.config:build/autotools/build/Makefile.config.in:Makefile.config.in])
