--- a/docSource/config.json
+++ b/docSource/config.json
@@ -5,6 +5,8 @@
     "theme": "documentation",
     "themeGit": "git@github.com:Loki-Astari/andvari-theme-documentation.git",
     "toc": [
-        {"name": "Introduction", "value": "intro.md"}
+        {"name": "Introduction", "value": "intro.md"},
+        {"name": "API", "value": "ThorSocketStream-api.md"},
+        {"name": "Internal", "value": "ThorSocketStream-internal.md"}
     ]
 }
