Update to latest build tools

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 git:
     submodules: false
 language: cpp
-env:
-    - THOR_STREAM_TEST_PORT=8080
 before_install:
     - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
     - sudo apt-get update
@@ -11,8 +9,8 @@ install:
     - sudo apt-get install python-dev -y
     - sudo apt-get install -qq libboost-all-dev
     - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 60 --slave /usr/bin/g++ g++ /usr/bin/g++-7
-    - wget -O boost_1_56.tar.gz http://sourceforge.net/projects/boost/files/boost/1.56.0/boost_1_56_0.tar.gz/download
-    - tar xzf boost_1_56.tar.gz;cd boost_1_56_0/;mkdir -p /tmp/extra;./bootstrap.sh --prefix=/tmp/extra
+    - wget -O boost_1_71_0.tar.gz https://dl.bintray.com/boostorg/release/1.71.0/source/boost_1_71_0.tar.gz
+    - tar xzf boost_1_71_0.tar.gz;cd boost_1_71_0/;mkdir -p /tmp/extra;./bootstrap.sh --prefix=/tmp/extra
     - ./b2 cxxflags="-Wno-strict-aliasing -Wno-unused-local-typedefs -Wno-maybe-uninitialized -Wno-deprecated-declarations -Wno-placement-new" --with-system --with-context --with-coroutine
     - sudo ./b2 --with-system --with-context --with-coroutine install | awk 'NR == 1 || NR % 25 == 0'
     - cd ..
@@ -25,4 +23,10 @@ script:
 after_success:
     - "./CreateHeaderOnly"
     - bash <(curl -s https://codecov.io/bash)
-
+branches:
+    only:
+        - master
+        - "/^Feature-.*$/"
+env:
+    global:
+    - secure: D5HPaNoM+cbZLcfqGvudY3irPd27q89npzr7jlaVjs1m782bii8XCKWwrwNQfge/7mtaY7RRDxdFJkRssVno5HaLItOg/MT6gBinyQGenPZXeh7ia2CYkeuiRhKrEfKAMhCcoe5RafYbCDWq8w5eZ6iMnRoFUiA66cWGlF1vBI4=
