--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 git:
     submodules: false
 language: cpp
+env:
+    - THOR_STREAM_TEST_PORT=8080
 before_install:
     - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
     - sudo apt-get update
