--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
     - http-server src/SocketStream/test/data/ &
 script:
     - ./configure --with-boost=/tmp/extra
-    - export PATH=${PATH}:$(pwd)/build/bin;make
+    - export PATH=${PATH}:$(pwd)/build/bin;export THOR_STREAM_TEST_PORT=8080;make
 after_success:
     - "./CreateHeaderOnly"
     - bash <(curl -s https://codecov.io/bash)
