--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,12 @@
 git:
-    submodules: false
+    submodules: true
 language: cpp
 env:
     - THOR_STREAM_TEST_PORT=8080
 before_install:
-    - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-    - sudo apt-get update
+    - ./.build/travis/presetup ${TRAVIS_OS_NAME}
 install:
-    - sudo apt-get install -qq g++-7 -y
-    - sudo apt-get install python-dev -y
-    - sudo apt-get install -qq libboost-all-dev
-    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 60 --slave /usr/bin/g++ g++ /usr/bin/g++-7
-    - wget -O boost_1_71_0.tar.gz https://dl.bintray.com/boostorg/release/1.71.0/source/boost_1_71_0.tar.gz
-    - tar xzf boost_1_71_0.tar.gz;cd boost_1_71_0/;mkdir -p /tmp/extra;./bootstrap.sh --prefix=/tmp/extra
-    - ./b2 cxxflags="-Wno-strict-aliasing -Wno-unused-local-typedefs -Wno-maybe-uninitialized -Wno-deprecated-declarations -Wno-placement-new" --with-system --with-context --with-coroutine
-    - sudo ./b2 --with-system --with-context --with-coroutine install | awk 'NR == 1 || NR % 25 == 0'
-    - cd ..
+    - ./.build/travis/setup ${TRAVIS_OS_NAME}
     - sudo apt-get install npm -y
     - npm install -g http-server
     - http-server src/SocketStream/test/data/ &
